--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "wait-on": "5.2.1"
   },
   "dependencies": {
-    "instagram-web-api": "^2.2.2"
+    "instagram-web-api": "^2.2.2",
+    "net": "^1.0.2"
   }
 }
