--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
@@ -24,6 +29,7 @@
     "react-dom": "^17.0.0",
     "react-icons": "^3.10.0",
     "react-markdown": "^6.0.2",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.6",
     "yup": "^0.32.8"
   },
@@ -38,5 +44,8 @@
     "postcss-nested": "^5.0.5",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
