--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "wait-on": "5.2.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@googlemaps/js-api-loader": "^1.12.10",
     "@googlemaps/react-wrapper": "^1.1.15",
+    "@mui/material": "^5.2.1",
+    "classnames": "^2.3.1",
     "googlemaps": "^1.12.0",
     "instagram-web-api": "^2.2.2",
     "net": "^1.0.2"
