--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.2.6",
