added base for auth

--- a/backend/api/page/models/page.settings.json
+++ b/backend/api/page/models/page.settings.json
@@ -59,7 +59,8 @@
         "sections.featured-email-contact-group",
         "sections.email-contact-form",
         "sections.login-form",
-        "sections.signupform"
+        "sections.signupform",
+        "sections.auth-feature-group"
       ],
       "pluginOptions": {
         "i18n": {
