--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
+    "@mui/styles": "^5.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
