added email on create functionality

--- a/backend/api/lead-form-submissions/models/lead-form-submissions.settings.json
+++ b/backend/api/lead-form-submissions/models/lead-form-submissions.settings.json
@@ -24,6 +24,17 @@
     },
     "location": {
       "type": "string"
+    },
+    "number": {
+      "type": "integer"
+    },
+    "message": {
+      "type": "richtext"
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "lead_form_submissions"
     }
   }
 }
