--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/js-api-loader": "^1.12.11",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
@@ -22,6 +23,7 @@
     "cookie": "^0.4.1",
     "date-fns": "2.14.0",
     "formik": "^2.2.6",
+    "instagram-web-api": "^2.2.2",
     "js-cookie": "3.0.0-rc.4",
     "next": "^11.0.0",
     "next-seo": "^4.7.1",
@@ -37,7 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
-    "eslint": "^7.30.0",
+    "eslint": "^8.3.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
